[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cmt_gratings"
version = "0.1.0"
description = "repo for cmt_gratings"
authors = ["tmayed"]
packages = [{include = "cmt_gratings"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.6"
scipy = "^1.15.3"
opencv-python = "^4.12.0.88"
matplotlib = "^3.10.5"
si-prefix = "^1.3.3"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.0"
black = "^23.9.1"

[tool.poetry.group.dev]
optional = true